# Trip-Wizards

./: .env.template  .firebaserc  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Improvements.md  PLACES_AUTOCOMPLETE_CHECKLIST.md  README.md  SECURITY.md  ToDo.md  contribution.md
travel_wizards/: .gitignore  CODEBASE.md  FIREBASE_SETUP.md  README.md  SECURITY_SUMMARY.md  firebase.json  firestore.indexes.json  firestore.rules  l10n.yaml  pubspec.yaml  pyproject.toml  storage.rules
travel_wizards/.azure/: design-improvements.md  design-system-spec.md  desktop-layout-redesign.md  screen-consistency-update.md  trip-planning-improvements.md
travel_wizards/android/: gradle.properties
travel_wizards/artifacts/: web_results.json
travel_wizards/docs/: A11Y.md  TESTING.md
travel_wizards/integration_test/: app_test.dart  basic_navigation_test.dart  destination_flow_test.dart  profile_test.dart
travel_wizards/lib/: firebase_options.dart.sample  firebase_options.template.dart  main.dart
travel_wizards/scripts/: android_automated_test.sh  android_live_test.sh  mcp_automation.sh
travel_wizards/test/: accessibility_baseline_test.dart  accessibility_semantics_test.dart  components_demo_accessibility_test.dart  contrast_verification_test.dart  design_tokens_test.dart  email_auth_test.dart  enhanced_location_integration_test.dart  explore_fallback_integration_test.dart  explore_store_test.dart  firebase_mocking_examples_test.dart  flaky_tests.md  golden_tests.dart  ideas_repository_test.dart  india_location_test.dart  indian_location_service_test.dart  (+18 more)
(+452 files in other folders)
