[project]
name = "travel-wizards"
version = "0.1.0"
description = ""
authors = [
    {name = "Hariharan",email = "hariharan@aigamer.dev"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "selenium (>=4.38.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
